Fixed modal wrapper z-index so it's in front of map, cleaned up code - deleting older code that was commented out

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -213,10 +213,10 @@ nav#user {
 #delete-results {
     display: none;
     position: fixed;
+    z-index: 2;
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
     background-color: rgba(0, 0, 0, 0.6);
 }
 
@@ -567,6 +567,7 @@ footer .btn-full:visited {
 
 #map {
     position: absolute;
+    z-index: 1;
     top: 0;
     bottom: 0;
     width: 100%;
